# s3-cli

./: Cargo.toml
src/: main.rs
